--- a/README
+++ b/README
@@ -1,2 +1,10 @@
-Python Interface to numa(3) Linux library.
+Python Interface to numa(3) Linux library
+=========================================
+
+API docs available at: http://smira.github.com/py-numa/
+
+Installation:
+    
+    easy_install numa
+
 
